# mun-kawaba

./: .gitignore  LICENSE  README.md  config.py.example  dict.py  main.py  pyproject.toml
hun_kawaba/: __main__.py  bot.py  logger.py  morphemes.py  words.py
hun_kawaba/cogs/: kawaba.py
